tests/baselines/reference/es5DateAPIs(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
es5DateAPIs.ts(1,6): error TS2554: Expected 2-7 arguments, but got 1.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== es5DateAPIs.ts (1 errors) ====
    Date.UTC(2017); // should error
         ~~~
!!! error TS2554: Expected 2-7 arguments, but got 1.
!!! related TS6210 lib.es5.d.ts:--:--: An argument for 'monthIndex' was not provided.